# sudoku-solver

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  environment.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
notebooks/: 1.0-os-initial-sudoku-solver.ipynb  Test_Hello_World.ipynb  Test_Sudoku_Solver.ipynb
src/: sudoku_solver.py
sudoku_solver/: sudoku_solver.py
