[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = ""
authors = ["Ozan Sahin <o.sahin@cartelsol.com>"]
readme = "README.md"
packages = [{include = "sudoku_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pylint = "^2.17.2"
black = "^23.3.0"
jupyterlab = "^3.6.3"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
